# parser-onto

./: .gitignore  ALGORITHM.md  CLAUDE.md  Makefile  go.mod  main.go  run_benchmark.sh
c-impl/: main.c
cpp-impl/: main.cpp
haskell-impl/: el-reasoner.cabal
haskell-impl/src/: Main.hs  Reasoner.hs
ontology/: model.go  obo_parser.go  owl_parser.go  writer.go
reasoner/: axioms.go  index.go  normalize.go  parallel.go  saturate.go  taxonomy.go
rust-impl/: Cargo.toml  benchmark.sh
rust-impl/src/: lib.rs  main.rs
testdata/: sample.obo  sample.owl
